--- a/src/app/modules/corso/corso.component.html
+++ b/src/app/modules/corso/corso.component.html
@@ -3,59 +3,66 @@
     </mat-form-field>
     <mat-icon>search</mat-icon>
 <div class="container">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" >
 
-      <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> Id </th>
-          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-      </ng-container>
-  >
-      <ng-container matColumnDef="nome">
-          <th mat-header-cell *matHeaderCellDef> Nome </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> Id </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="descrizione">
-          <th mat-header-cell *matHeaderCellDef> Descrizione </th>
-          <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-      </ng-container>
+        <ng-container matColumnDef="nome">
+            <th mat-header-cell *matHeaderCellDef> Nome </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="docente">
-          <th mat-header-cell *matHeaderCellDef> Docente </th>
-          <td mat-cell *matCellDef="let element"> {{element.professor.name}} {{element.professor.surname}} </td>
-      </ng-container>
+        <ng-container matColumnDef="descrizione">
+            <th mat-header-cell *matHeaderCellDef> Descrizione </th>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="dataDiInizio">
-          <th mat-header-cell *matHeaderCellDef> Data di inizio corso </th>
-          <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
-      </ng-container>
+        <ng-container matColumnDef="docente">
+            <th mat-header-cell *matHeaderCellDef> Docente </th>
+            <td mat-cell *matCellDef="let element"> {{element.professor.name}} {{element.professor.surname}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="dataDiFine">
-          <th mat-header-cell *matHeaderCellDef> Data di fine corso </th>
-          <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
-      </ng-container>
+        <ng-container matColumnDef="dataDiInizio">
+            <th mat-header-cell *matHeaderCellDef> Data di inizio corso </th>
+            <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="modifica">
-          <th mat-header-cell *matHeaderCellDef> Modifica </th>
-          <td mat-cell *matCellDef="let element">
-              <button mat-icon-button color="" (click)="startModify(element)" [ngClass]="{'noClick': isClicked == true}">
-                  <mat-icon>create</mat-icon>
-              </button>
-          </td>
-      </ng-container>
+        <ng-container matColumnDef="dataDiFine">
+            <th mat-header-cell *matHeaderCellDef> Data di fine corso </th>
+            <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="rimuovi">
-          <th mat-header-cell *matHeaderCellDef> Rimuovi </th>
-          <td mat-cell *matCellDef="let element">
-              <button mat-icon-button color="warn" (click)="deleteCorso(element.id)" [ngClass]="{'noClick': isClicked == true}">
-                  <mat-icon>delete</mat-icon>
-              </button>
-          </td>
-      </ng-container>
+        <ng-container matColumnDef="modifica">
+            <th mat-header-cell *matHeaderCellDef> Modifica </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="" (click)="startModify(element)" [ngClass]="{'noClick': isClicked == true}">
+                    <mat-icon>create</mat-icon>
+                </button>
+            </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'highlight': selectedRowIndex == row.id}"></tr>
-  </table>
+        <ng-container matColumnDef="rimuovi">
+            <th mat-header-cell *matHeaderCellDef> Rimuovi </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="warn" (click)="deleteCorso(element.id)" [ngClass]="{'noClick': isClicked == true}">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'highlight': selectedRowIndex == row.id}"></tr>
+    </table>
+    <mat-paginator [length]="100"
+                   [pageSize]="10"
+                   [pageSizeOptions]="[5, 10, 25, 100]"
+                   aria-label="Select page">
+    </mat-paginator>
+  </div>
   <app-corso-form [idInput]="idCourse" (digitClick)="digitClickEvent($event)" *ngIf="isClicked==true"></app-corso-form>
 </div>
  <button mat-fab id="add" color="primary" (click)="addCourse()" [ngClass]="{'noClick': isClicked == true}">
