--- a/src/app/modules/professore/professore.component.html
+++ b/src/app/modules/professore/professore.component.html
@@ -4,88 +4,95 @@
     </mat-form-field>
     <mat-icon>search</mat-icon>
 </div>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource">
 
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
+      <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> Id </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="nome">
-        <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
+      <ng-container matColumnDef="nome">
+          <th mat-header-cell *matHeaderCellDef> Nome </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="cognome">
-        <th mat-header-cell *matHeaderCellDef> Cognome </th>
-        <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
-    </ng-container>
+      <ng-container matColumnDef="cognome">
+          <th mat-header-cell *matHeaderCellDef> Cognome </th>
+          <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="data">
-        <th mat-header-cell *matHeaderCellDef> Data </th>
-        <td mat-cell *matCellDef="let element"> {{element.birthdayDate}} </td>
-    </ng-container>
+      <ng-container matColumnDef="data">
+          <th mat-header-cell *matHeaderCellDef> Data </th>
+          <td mat-cell *matCellDef="let element"> {{element.birthdayDate}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="comune">
-        <th mat-header-cell *matHeaderCellDef> Comune </th>
-        <td mat-cell *matCellDef="let element"> {{element.city}} </td>
-    </ng-container>
+      <ng-container matColumnDef="comune">
+          <th mat-header-cell *matHeaderCellDef> Comune </th>
+          <td mat-cell *matCellDef="let element"> {{element.city}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="codiceFiscale">
-        <th mat-header-cell *matHeaderCellDef> Codice Fiscale </th>
-        <td mat-cell *matCellDef="let element"> {{element.fiscalCode}} </td>
-    </ng-container>
+      <ng-container matColumnDef="codiceFiscale">
+          <th mat-header-cell *matHeaderCellDef> Codice Fiscale </th>
+          <td mat-cell *matCellDef="let element"> {{element.fiscalCode}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="telefono">
-        <th mat-header-cell *matHeaderCellDef> Telefono </th>
-        <td mat-cell *matCellDef="let element"> {{element.number}} </td>
-    </ng-container>
+      <ng-container matColumnDef="telefono">
+          <th mat-header-cell *matHeaderCellDef> Telefono </th>
+          <td mat-cell *matCellDef="let element"> {{element.number}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="cap">
-        <th mat-header-cell *matHeaderCellDef> CAP </th>
-        <td mat-cell *matCellDef="let element"> {{element.cap}} </td>
-    </ng-container>
+      <ng-container matColumnDef="cap">
+          <th mat-header-cell *matHeaderCellDef> CAP </th>
+          <td mat-cell *matCellDef="let element"> {{element.cap}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="indirizzo">
-        <th mat-header-cell *matHeaderCellDef> Indirizzo </th>
-        <td mat-cell *matCellDef="let element"> {{element.address}} </td>
-    </ng-container>
+      <ng-container matColumnDef="indirizzo">
+          <th mat-header-cell *matHeaderCellDef> Indirizzo </th>
+          <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="civico">
-        <th mat-header-cell *matHeaderCellDef> Numero civico </th>
-        <td mat-cell *matCellDef="let element"> {{element.houseNumber}} </td>
-    </ng-container>
+      <ng-container matColumnDef="civico">
+          <th mat-header-cell *matHeaderCellDef> Numero civico </th>
+          <td mat-cell *matCellDef="let element"> {{element.houseNumber}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="corso">
-        <th mat-header-cell *matHeaderCellDef> Insegna </th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="" (click)="addCourse(element)">
-                <mat-icon>add</mat-icon>
-            </button>
-        </td>
-    </ng-container>
+      <ng-container matColumnDef="corso">
+          <th mat-header-cell *matHeaderCellDef> Insegna </th>
+          <td mat-cell *matCellDef="let element">
+              <button mat-icon-button color="" (click)="addCourse(element)">
+                  <mat-icon>add</mat-icon>
+              </button>
+          </td>
+      </ng-container>
 
-    <ng-container matColumnDef="modifica">
-        <th mat-header-cell *matHeaderCellDef> Modifica </th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="" (click)="startModify(element)">
-                <mat-icon>create</mat-icon>
-            </button>
-        </td>
-    </ng-container>
+      <ng-container matColumnDef="modifica">
+          <th mat-header-cell *matHeaderCellDef> Modifica </th>
+          <td mat-cell *matCellDef="let element">
+              <button mat-icon-button color="" (click)="startModify(element)">
+                  <mat-icon>create</mat-icon>
+              </button>
+          </td>
+      </ng-container>
 
-    <ng-container matColumnDef="rimuovi">
-        <th mat-header-cell *matHeaderCellDef> Rimuovi </th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="warn" (click)="deleteProfessore(element.id)">
-                <mat-icon>delete</mat-icon>
-            </button>
-        </td>
-    </ng-container>
+      <ng-container matColumnDef="rimuovi">
+          <th mat-header-cell *matHeaderCellDef> Rimuovi </th>
+          <td mat-cell *matCellDef="let element">
+              <button mat-icon-button color="warn" (click)="deleteProfessore(element.id)">
+                  <mat-icon>delete</mat-icon>
+              </button>
+          </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'highlight': selectedRowIndex == row.id}"></tr>
-</table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'highlight': selectedRowIndex == row.id}"></tr>
+  </table>
+  <mat-paginator [length]="100"
+                 [pageSize]="10"
+                 [pageSizeOptions]="[5, 10, 25, 100]"
+                 aria-label="Select page">
+  </mat-paginator>
+</div>
 <button mat-fab id="add" color="primary" (click)="addProfessor()">
     <mat-icon>add_circle</mat-icon>
 </button>
