--- a/src/app/modules/registrations/registrations.component.html
+++ b/src/app/modules/registrations/registrations.component.html
@@ -4,50 +4,57 @@
         <h2>{{student.name}} {{student.surname}}</h2>
     </h3>
 </div>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" >
 
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
+      <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> Id </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="nome">
-        <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
+      <ng-container matColumnDef="nome">
+          <th mat-header-cell *matHeaderCellDef> Nome </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="descrizione">
-        <th mat-header-cell *matHeaderCellDef> Descrizione </th>
-        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-    </ng-container>
+      <ng-container matColumnDef="descrizione">
+          <th mat-header-cell *matHeaderCellDef> Descrizione </th>
+          <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="docente">
-        <th mat-header-cell *matHeaderCellDef> Docente </th>
-        <td mat-cell *matCellDef="let element"> {{element.professor.name}} {{element.professor.surname}} </td>
-    </ng-container>
+      <ng-container matColumnDef="docente">
+          <th mat-header-cell *matHeaderCellDef> Docente </th>
+          <td mat-cell *matCellDef="let element"> {{element.professor.name}} {{element.professor.surname}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="dataDiInizio">
-        <th mat-header-cell *matHeaderCellDef> Data di inizio corso </th>
-        <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
-    </ng-container>
+      <ng-container matColumnDef="dataDiInizio">
+          <th mat-header-cell *matHeaderCellDef> Data di inizio corso </th>
+          <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="dataDiFine">
-        <th mat-header-cell *matHeaderCellDef> Data di fine corso </th>
-        <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
-    </ng-container>
+      <ng-container matColumnDef="dataDiFine">
+          <th mat-header-cell *matHeaderCellDef> Data di fine corso </th>
+          <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="rimuovi">
-      <th mat-header-cell *matHeaderCellDef> Abbandona </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="warn" (click)="deleteRegistration(student, element)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="rimuovi">
+        <th mat-header-cell *matHeaderCellDef> Abbandona </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="warn" (click)="deleteRegistration(student, element)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'highlight': selectedRowIndex == row.id}"></tr>
-</table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'highlight': selectedRowIndex == row.id}"></tr>
+  </table>
+  <mat-paginator [length]="100"
+                 [pageSize]="10"
+                 [pageSizeOptions]="[5, 10, 25, 100]"
+                 aria-label="Select page">
+  </mat-paginator>
+</div>
 <button mat-fab id="add" color="primary" (click)="addCourse()">
     <mat-icon>library_add</mat-icon>
 </button>
