--- a/src/app/modules/corso/corso.component.html
+++ b/src/app/modules/corso/corso.component.html
@@ -28,12 +28,12 @@
 
         <ng-container matColumnDef="dataDiInizio">
             <th mat-header-cell *matHeaderCellDef> Data di inizio corso </th>
-            <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
+            <td mat-cell *matCellDef="let element"> {{(element.startDate | dayjsPipe : 'LL' : 'it') | async}} </td>
         </ng-container>
 
         <ng-container matColumnDef="dataDiFine">
             <th mat-header-cell *matHeaderCellDef> Data di fine corso </th>
-            <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
+            <td mat-cell *matCellDef="let element"> {{(element.endDate | dayjsPipe : 'LL' : 'it') | async}} </td>
         </ng-container>
 
         <ng-container matColumnDef="modifica">
