--- a/src/app/modules/professore/professore.component.html
+++ b/src/app/modules/professore/professore.component.html
@@ -24,7 +24,7 @@
 
       <ng-container matColumnDef="data">
           <th mat-header-cell *matHeaderCellDef> Data </th>
-          <td mat-cell *matCellDef="let element"> {{element.birthdayDate}} </td>
+          <td mat-cell *matCellDef="let element"> {{(element.birthdayDate | dayjsPipe : 'LL' : 'it') | async}} </td>
       </ng-container>
 
       <ng-container matColumnDef="comune">
