--- a/src/app/modules/registrations/registrations.component.html
+++ b/src/app/modules/registrations/registrations.component.html
@@ -1,4 +1,4 @@
-<div>
+<div id="title">
     <h3> Corsi seguiti da
         <br>
         <h2>{{student.name}} {{student.surname}}</h2>
@@ -29,12 +29,12 @@
 
       <ng-container matColumnDef="dataDiInizio">
           <th mat-header-cell *matHeaderCellDef> Data di inizio corso </th>
-          <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
+          <td mat-cell *matCellDef="let element"> {{(element.startDate | dayjsPipe : 'LL' : 'it') | async}} </td>
       </ng-container>
 
       <ng-container matColumnDef="dataDiFine">
           <th mat-header-cell *matHeaderCellDef> Data di fine corso </th>
-          <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
+          <td mat-cell *matCellDef="let element"> {{(element.endDate | dayjsPipe : 'LL' : 'it') | async}} </td>
       </ng-container>
 
       <ng-container matColumnDef="rimuovi">
